assets/css/site.css
/* ... */
div.search_topic_container 	{ width: 110px; min-height: 120px; margin: 0 10px 40px 10px; float: left; text-align: center; }
span.search_topic_count 	{
	width: 15px;
	display: block;
	text-align: center;
	background-color: #c9c9c9;
	padding: 5px;
	border-radius: 15px;
	color:#333;
	font-size: 12px;
	font-weight: bold;
	float: left;
}
span.search_topic_text {
	display: block;
	float: left;
	font-size: 12px;
	font-weight: bold;
	text-align: center;
	margin-top: 5px;
	margin-left: 5px;
}

/* Words - SHOULD Work in Multiple Search Types */
div.search_mood_words	{ width: 250px; float: left; margin-top: 15px; }
div.search_words_row 	{ border-bottom: 1px solid #999; margin: 10px 0px; }
div.search_words_count 	{
	width: 45px;
	border-right: 1px solid #999;
	color: #999;
	font-style: italic;
	font-size: 18px;
	float: left;
	text-align: center;
}
div.search_words_words {
	width: 185px;
	font-size: 18px;
	float: left;
	margin-left: 15px;
	margin-bottom: 10px;
}



/* SI Core, Blog Module */
div.content_container {
	width: 675px;
	background-color: #FEFEFE;
	border-radius: 15px;
	padding: 20px 25px;
	margin: 25px 0;
	border: 1px solid #C9C9C9;
}

#comments						{ width: 645px; margin: 45px 0 45px 0; }
#comments ul					{ margin: 0; }
#comments ul li					{ margin: 0 0 35px 0; }
#comments ul.comment_actions li { margin: 0 0 0 15px; }

#comments_list					{ width: 450px; margin: 25px 0 0 0; }
#comments_list li				{ margin: 0 0 15px 0; }

#comments_write					{ width: 450px; margin: 0; }
#comments_write li				{ margin: 0; }

li.comment						{ margin: 0; clear: both; display: block; }
li.comment:hover ul.comment_actions { visibility: visible; }
span.comment_thumbnail			{ width: 48px; height: 48px; display: block; position: relative; top: 0; left: 0; float: left; margin: 0 12px 35px 0; }
span.comment 					{ width: 375px; display: block; margin: 0; line-height: 21px;  position: relative; top: -4px; left: 0; float: left; }
span.comment_date 				{ width: 175px; display: block; margin: 0; font-size: 12px; color: #999999; }

li.sub_comment					{ margin: 0 0 20px 0; clear: both; }
li.sub_comment:hover ul.comment_actions { visibility: visible; }
span.sub_comment_thumbnail		{ width: 48px; height: 48px; display: block; position: relative; top: 0; left: 65px; float: left; margin: 0 12px 35px 0; }
span.sub_comment 				{ width: 325px; display: block; margin: 0; line-height: 21px;  position: relative; top: -4px; left: 62px; float: left; }
span.sub_comment_date 			{ width: 175px; display: block; margin: 0; font-size: 12px; color: #999999; }

span.comment_write				{ width: 375px; display: block; margin: 0; line-height: 21px;  position: relative; top: -4px; left: 0; float: left; }

#comment_name					{ width: 315px; margin: 0 0 10px 0; }
#comment_email					{ width: 315px; margin: 0 0 0 0; }
#comment_write_text				{ width: 315px; margin: 10px 0 5px 0; }

ul.comment_actions 				{ margin: 0; position: relative; top: -20px; right: 12px; margin: 0; list-style: none; float: right; visibility: hidden; }
ul.comment_actions li			{ float: left; margin: 0; }
ul.comment_actions li a 		{ color: #999999; font-size: 12px; }
ul.comment_actions li a:visited	{ color: #999999; font-size: 12px; }
ul.comment_actions li a:hover 	{ color: #2078ce; font-size: 12px; }
/* ... */

